change lanuage both pashto and Dari Updated

--- a/dashboard/templates/v2/qlink_list.html
+++ b/dashboard/templates/v2/qlink_list.html
@@ -1,7 +1,9 @@
+
+{% load i18n %}
 <div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip jq-dropdown-scroll">
     <ul class="jq-dropdown-menu">
         {% for item in adm_child %}
-        <li><a href"/" onclick="jump_url({{ item.code }})">{{ item.name }}</a></li>
+        <li><a href"/" onclick="jump_url({{ item.code }})">{% trans item.name %}</a></li>
         {% endfor %}
     </ul>
 </div>
@@ -9,7 +11,7 @@
 <div id="jq-dropdown-prov" class="jq-dropdown jq-dropdown-tip jq-dropdown-scroll">
     <ul class="jq-dropdown-menu">
         {% for item in adm_prov %}
-        <li><a href"/" onclick="jump_url({{ item.code }})">{{ item.name }}</a></li>
+        <li><a href"/" onclick="jump_url({{ item.code }})">{% trans item.name %}</a></li>
         {% endfor %}
     </ul>
 </div>
@@ -17,7 +19,7 @@
 <div id="jq-dropdown-dist" class="jq-dropdown jq-dropdown-tip jq-dropdown-scroll">
     <ul class="jq-dropdown-menu">
         {% for item in adm_dist %}
-        <li><a href"/" onclick="jump_url({{ item.code }})">{{ item.name }}</a></li>
+        <li><a href"/" onclick="jump_url({{ item.code }})">{% trans item.name %}</a></li>
         {% endfor %}
     </ul>
 </div>
