--- a/dashboard/templates/v2/breadcrumb.html
+++ b/dashboard/templates/v2/breadcrumb.html
@@ -1,4 +1,6 @@
-        {% for label in parent_label_dash %}
+{% load i18n %}
+
+   {% for label in parent_label_dash %}
         <span class="divider">|</span>
         <span class="{% if label.code > 0 %}qlinks{% else %}dash-links{% endif %}" {% if label.code == 0 %}
             onclick='jump_url({{ label.code }});'
@@ -11,7 +13,7 @@
                 data-jq-dropdown='#jq-dropdown-dist'
             {% endif %}
         {% endif %}>
-            {{ label.name }}
+            {% trans label.name %}
         </span>
         {% endfor %}
         {% if qlinks != '' %}
