--- a/geonode/templates/v2/_comments.html
+++ b/geonode/templates/v2/_comments.html
@@ -36,7 +36,7 @@
                         </div>
                         {% endif %}
                     </div>
-                    <p>{{ comment.comment }}</p>
+                    <p>{{comment.comment }}</p>
                 </div>
             </div>
               {% endfor %}
@@ -46,8 +46,8 @@
         {% if user.is_authenticated %}
           {% comment_form resource as form %}
         <div class="comment-form">
-            <h4>Leave a Comment</h4>
-            <p class="muted">Make sure you enter the (*) required information where indicated. HTML code is not allowed.</p>
+            <h4>{% trans "Leave a Comment" %}</h4>
+            <p class="muted">{% trans "Make sure you enter the (*) required information where indicated. HTML code is not allowed." %}</p>
             <form action="{% comment_target resource %}" method="POST" id="form_post_comment">
               {% csrf_token %}
               {{ form|as_bootstrap }}
