--- a/geonode/templates/avatar/add.html
+++ b/geonode/templates/avatar/add.html
@@ -1,8 +1,25 @@
-{% extends "site_base.html" %}
+{% extends "v2/site_base.html" %}
 {% load i18n avatar_tags %}
 {% load bootstrap_tags %}
 
-{% block body %}
+{% block body_outer %}
+<section class="title">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-6">
+	                <h1>{% trans "Add avatar" %}</h1>
+	            </div>
+	            <div class="col-md-6">
+	                <ul class="breadcrumb pull-right">
+	                    <li class="active">{% trans "Add avatar" %}</li>
+	                </ul>
+	            </div>
+	        </div>
+	    </div>
+	</section>
+    <section>
+    <div class="container">
+    <div class="row">
 	<a href="{% url "profile_edit" user.username %}">{% trans "Back to edit your profile information" %}</a>
 	<p>{% trans "Your current avatar: " %}</p>
     {% avatar user %}
@@ -13,4 +30,7 @@
         {{ upload_avatar_form.as_p }}
         <p>{% csrf_token %}<input type="submit" value="{% trans "Upload New Image" %}" /></p>
     </form>
+    </div>
+    </div>
+    </section>
 {% endblock %}
