--- a/dashboard/templates/v2/dash_fforecast.html
+++ b/dashboard/templates/v2/dash_fforecast.html
@@ -707,7 +707,7 @@
 			                                </thead>
 			                                <tbody>
 			                                    <tr>
-			                                        <td class="boldRow">{{parent_label}}</td>
+			                                        <td class="boldRow">{% trans parent_label %}</td>
 			                                        <td class="ext boldRow">{{ flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh boldRow">{{ flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high boldRow">{{ flashflood_forecast_high_pop }}</td>
@@ -721,7 +721,7 @@
 			                                    </tr>
 			                                    {% for data in glofas_gfms_child %}
 			                                    <tr class="selectable" onclick="window.document.location='?page=floodforecast&code={{data.code}}';">
-			                                        <td>{{data.na_en}}</td>
+			                                        <td>{% trans data.na_en %}</td>
 			                                        <td class="ext_fill">{{ data.flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh_fill">{{ data.flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high_fill">{{ data.flashflood_forecast_high_pop }}</td>
@@ -760,7 +760,7 @@
 			                                </thead>
 			                                <tbody>
 			                                    <tr>
-			                                        <td class="boldRow">{{parent_label}}</td>
+			                                        <td class="boldRow">{% trans parent_label %}</td>
 			                                        <td class="ext boldRow">{{ flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh boldRow">{{ flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high boldRow">{{ flashflood_forecast_high_pop }}</td>
@@ -774,7 +774,7 @@
 			                                    </tr>
 			                                    {% for data in glofas_gfms_child %}
 			                                    <tr class="selectable" onclick="window.document.location='?page=floodforecast&code={{data.code}}';">
-			                                        <td>{{data.na_en}}</td>
+			                                        <td>{% trans data.na_en %}</td>
 			                                        <td class="ext_fill">{{ data.flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh_fill">{{ data.flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high_fill">{{ data.flashflood_forecast_high_pop }}</td>
@@ -1007,7 +1007,7 @@
 			                                </thead>
 			                                <tbody>
 			                                    <tr>
-			                                        <td class="boldRow">{{parent_label}}</td>
+			                                        <td class="boldRow">{% trans parent_label %}</td>
 			                                        <td class="ext boldRow">{{ flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh boldRow">{{ flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high boldRow">{{ flashflood_forecast_high_pop }}</td>
@@ -1021,7 +1021,7 @@
 			                                    </tr>
 			                                    {% for data in glofas_child %}
 			                                    <tr class="selectable" onclick="window.document.location='?page=floodforecast&code={{data.code}}';">
-			                                        <td>{{data.na_en}}</td>
+			                                        <td>{% trans data.na_en %}</td>
 			                                        <td class="ext_fill">{{ data.flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh_fill">{{ data.flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high_fill">{{ data.flashflood_forecast_high_pop }}</td>
@@ -1060,7 +1060,7 @@
 			                                </thead>
 			                                <tbody>
 			                                    <tr>
-			                                        <td class="boldRow">{{parent_label}}</td>
+			                                        <td class="boldRow">{% trans parent_label %}</td>
 			                                        <td class="ext boldRow">{{ flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh boldRow">{{ flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high boldRow">{{ flashflood_forecast_high_pop }}</td>
@@ -1074,7 +1074,7 @@
 			                                    </tr>
 			                                    {% for data in glofas_child %}
 			                                    <tr class="selectable" onclick="window.document.location='?page=floodforecast&code={{data.code}}';">
-			                                        <td>{{data.na_en}}</td>
+			                                        <td>{% trans data.na_en %}</td>
 			                                        <td class="ext_fill">{{ data.flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh_fill">{{ data.flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high_fill">{{ data.flashflood_forecast_high_pop }}</td>
@@ -1309,7 +1309,7 @@
 			                                </thead>
 			                                <tbody>
 			                                    <tr>
-			                                        <td class="boldRow">{{parent_label}}</td>
+			                                        <td class="boldRow">{% trans parent_label %}</td>
 			                                        <td class="ext boldRow">{{ flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh boldRow">{{ flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high boldRow">{{ flashflood_forecast_high_pop }}</td>
@@ -1323,7 +1323,7 @@
 			                                    </tr>
 			                                    {% for data in lc_child %}
 			                                    <tr class="selectable" onclick="window.document.location='?page=floodforecast&code={{data.code}}';">
-			                                        <td>{{data.na_en}}</td>
+			                                        <td>{% trans data.na_en %}</td>
 			                                        <td class="ext_fill">{{ data.flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh_fill">{{ data.flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high_fill">{{ data.flashflood_forecast_high_pop }}</td>
@@ -1362,7 +1362,7 @@
 			                                </thead>
 			                                <tbody>
 			                                    <tr>
-			                                        <td class="boldRow">{{parent_label}}</td>
+			                                        <td class="boldRow">{% trans parent_label %}</td>
 			                                        <td class="ext boldRow">{{ flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh boldRow">{{ flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high boldRow">{{ flashflood_forecast_high_pop }}</td>
@@ -1376,7 +1376,7 @@
 			                                    </tr>
 			                                    {% for data in lc_child %}
 			                                    <tr class="selectable" onclick="window.document.location='?page=floodforecast&code={{data.code}}';">
-			                                        <td>{{data.na_en}}</td>
+			                                        <td>{% trans data.na_en %}</td>
 			                                        <td class="ext_fill">{{ data.flashflood_forecast_extreme_pop }}</td>
 			                                        <td class="vhigh_fill">{{ data.flashflood_forecast_veryhigh_pop }}</td>
 			                                        <td class="high_fill">{{ data.flashflood_forecast_high_pop }}</td>
