new update the dari language and change setting file as well

--- a/geonode/templates/v2/partners.html
+++ b/geonode/templates/v2/partners.html
@@ -29,7 +29,7 @@
 	<section id="dataProvider">
 		<div class="container">
 			<h3>{% trans "Data Providers and Partners" %}</h3>
-			<p>{% trans "This list provides an insight in the main partners who have provided or are providing essential data." %}
+			<p>{% trans "This list provides an insight in the main partners who have provided or providing essential data." %}
 			{% trans "For each of the organisations the main contributions for the AHNDC are listed." %}<br>
 			{% trans "Homepage | Photo credit to Bob McKerrow, description:  Teshkan Valley, Badakhshan" %}</p>
 			<p>&nbsp;</p>
